githubAPI first Hackathon completed

--- a/heckathon github assignment/mystyle.css
+++ b/heckathon github assignment/mystyle.css
@@ -1,8 +1,8 @@
 h1
 {
-    text-align: center;
+    text-align: right;
     color: white;
-    background-color: #d42e2e;
+    background-color: #1eb878;
     padding: 25px;
 }
 
