--- a/heckathon github assignment/mystyle.css
+++ b/heckathon github assignment/mystyle.css
@@ -2,7 +2,7 @@ h1
 {
     text-align: right;
     color: white;
-    background-color: #1eb878;
+    background-color: #0d5235;
     padding: 25px;
 }
 
@@ -23,9 +23,9 @@ padding: 100px;
     left: 0;
     right: 0;
     margin: auto;
-    width: 2600px;
+    width: 2700px;
     height:1000px;
-    background-color: rgb(34, 46, 46);
+    background-color: rgb(21, 49, 49);
     
 }
 
